--- a/Pages/ForPartner/RouteManage/Index.cshtml
+++ b/Pages/ForPartner/RouteManage/Index.cshtml
@@ -17,7 +17,7 @@
             <li><a href="#" class="active" style="text-decoration: none;">Lộ trình của tôi</a></li>
         </ul>
     </div>
-    <a asp-page="./Edit" class="report">
+    <a asp-page="./Edit" class="report" style="text-decoration: none;">
         <i class='bx bx-plus-circle'></i>
         <span>Đề xuất Lộ trình Mới</span>
     </a>
