--- a/Pages/Home/ContactUs/Index.cshtml
+++ b/Pages/Home/ContactUs/Index.cshtml
@@ -55,7 +55,7 @@
                 <textarea asp-for="Input.Content" class="contact-textarea" placeholder="Nội dung"></textarea>
                 <span asp-validation-for="Input.Content" class="text-danger"></span>
             </div>
-            <button class="contact-btn" type="submit" style="align-self: center;">Gửi</button>
+            <button class="contact-btn" type="submit" style="margin-left: 12px; width: auto; padding-left: 20px; padding-right: 20px;">Gửi</button>
         </form>
     </div>
 </div>
