--- a/Pages/ForCustomer/TicketInvoice/Index.cshtml
+++ b/Pages/ForCustomer/TicketInvoice/Index.cshtml
@@ -17,7 +17,7 @@
     }
     @if (Model.Order != null)
     {
-        <div class="card-ticket">
+        <div class="card-ticket" style="background-color: #fff; border-bottom-left-radius: 15px; border-bottom-right-radius: 15px;">
             <div class="card-body-ticket">
                 <div>
                     <div class="content-ticket-info">
