--- a/Pages/ForPartner/DriverManage/Create.cshtml
+++ b/Pages/ForPartner/DriverManage/Create.cshtml
@@ -77,7 +77,7 @@
                 </div>
             </div>
             
-            <div class="row">
+            @* <div class="row">
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label asp-for="DriverInput.Status" class="form-label"></label>
@@ -87,7 +87,7 @@
                         <span asp-validation-for="DriverInput.Status" class="text-danger"></span>
                     </div>
                 </div>
-            </div>
+            </div> *@
 
             <div class="mt-4">
                 <button type="submit" class="btn btn-primary">Thêm Tài xế</button>
